--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                 <div class="habit" data-name="water" title="Tomar água">💧</div>
                 <div class="habit" data-name="food" title="Dieta">🥗</div>
                 <div class="habit" data-name="codar" title="Programar">💻</div>
+                <div class="habit" data-name="english" title="Inglês">🎫</div>
                 <div class="habit" data-name="read" title="Ler">📚</div>    
             </div>
 
